...
      Количество сыгранных квизов: \(statisticService.gamesCount)
      Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGame.date.dateTimeString))
      Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%
      """

      let viewModel = QuizResultsViewModel(
        title: "Этот раунд окончен!",
        text: text,
        buttonText: "Сыграть ещё раз")
      viewController.showResults(quiz: viewModel)
    } else {
      switchToNextQuestion()
      questionFactory.requestNextQuestion()
...
